oplk/edrv.h

//------------------------------------------------------------------------------
// Type definitions
//------------------------------------------------------------------------------
typedef struct sEdrvTxBuffer tEdrvTxBuffer;
typedef struct sEdrvRxBuffer tEdrvRxBuffer;
/// Callback function pointer for Rx frames
typedef tEdrvReleaseRxBuffer (*tEdrvRxHandler)(tEdrvRxBuffer* pRxBuffer_p);
/// Callback function pointer for Edrv cyclic sync
typedef tOplkError (*tEdrvCyclicCbSync)(void);
/// Callback function pointer for Edrv cyclic error
typedef tOplkError (*tEdrvCyclicCbError)(tOplkError errorCode_p, tEdrvTxBuffer* pTxBuffer_p);
/**
\brief Structure for Tx buffer

This structure is the Tx buffer descriptor.
*/
struct sEdrvTxBuffer
{
    UINT                txFrameSize;    ///< Size of Tx frame (without CRC)
    UINT32              timeOffsetNs;   ///< Tx delay to a previously sent frame [ns]
    UINT32              timeOffsetAbs;  ///< Absolute Tx time [ticks]
    UINT64              launchTime;     ///< Launch time of frame [ns]
    tEdrvTxHandler      pfnTxHandler;   ///< Tx callback function
    tEdrvTxBufferNumber txBufferNumber; ///< Edrv Tx buffer number
    UINT8*              pBuffer;        ///< Pointer to the Tx buffer
    UINT                maxBufferSize;  ///< Maximum size of the Tx buffer
};
/**
\brief Structure for Rx buffer

This structure is the Rx buffer descriptor.
*/
struct sEdrvRxBuffer
{
    tEdrvBufferInFrame  bufferInFrame;  ///< Position of Rx buffer in a frame
    UINT                rxFrameSize;    ///< Size of Rx frame (without CRC)
    UINT8*              pBuffer;        ///< Pointer to the Rx buffer
    tTimestamp*         pRxTimeStamp;   ///< Pointer to Rx time stamp
};
/**
\brief Structure for initialization

This structure is used to initialize the Ethernet driver module.
*/
typedef struct
{
    UINT8           aMacAddr[6];        ///< Ethernet controller MAC address
    tEdrvRxHandler  pfnRxHandler;       ///< Rx frame callback function pointer
    tHwParam        hwParam;            ///< Hardware parameter
} tEdrvInitParam;
/**
\brief Structure for Rx filter

This structure is used to control the Rx filters.
*/
typedef struct
{
    UINT            handle;             ///< Handle to Rx filter
    BOOL            fEnable;            ///< Enable the Rx filter
    UINT8           aFilterValue[22];   ///< Rx filter values
    UINT8           aFilterMask[22];    ///< Rx filter mask
    tEdrvTxBuffer*  pTxBuffer;          ///< Tx frame to be transmitted when filter matches
#if (EDRV_FILTER_WITH_RX_HANDLER != FALSE)
    tEdrvRxHandler  pfnRxHandler;       ///< Rx frame callback function pointer for this filter
#endif
} tEdrvFilter;
/**
\brief Structure for cyclic Ethernet driver diagnostics

This structure is used to provide diagnostics of the cyclic Ethernet driver.
*/
typedef struct
{
    // continuous min/max/avg measurement
    ULONGLONG   cycleCount;                                 ///< Cycle counter
    UINT32      cycleTimeMin;                               ///< Minimum measured cycle time
    UINT32      cycleTimeMax;                               ///< Maximum measured cycle time
    ULONGLONG   cycleTimeMeanSum;                           ///< Sum of the mean measured cycle times
    UINT32      usedCycleTimeMin;                           ///< Minimum utilized cycle time
    UINT32      usedCycleTimeMax;                           ///< Maximum utilized cycle time
    ULONGLONG   usedCycleTimeMeanSum;                       ///< Sum of the mean utilized cycle times
    UINT32      spareCycleTimeMin;                          ///< Minimum spare cycle time
    UINT32      spareCycleTimeMax;                          ///< Maximum spare cycle time
    ULONGLONG   spareCycleTimeMeanSum;                      ///< Sum of the mean spare cycle times
    // sampling of runaway cycles
    UINT        sampleNum;                                  ///< Sample number
    UINT        sampleBufferedNum;                          ///< Buffered sample number
    ULONGLONG   aSampleTimeStamp[EDRV_CYCLIC_SAMPLE_NUM];   ///< Array of sampled timestamps (SoC send)
    UINT32      aCycleTime[EDRV_CYCLIC_SAMPLE_NUM];         ///< Array of cycle time values (until next SoC send)
    UINT32      aUsedCycleTime[EDRV_CYCLIC_SAMPLE_NUM];     ///< Array of used cycle time values
    UINT32      aSpareCycleTime[EDRV_CYCLIC_SAMPLE_NUM];    ///< Array of spare cycle time values
} tEdrvCyclicDiagnostics;
tOplkError edrv_init(tEdrvInitParam* pEdrvInitParam_p);
tOplkError edrv_shutdown(void);
tOplkError edrv_setRxMulticastMacAddr(UINT8* pMacAddr_p);
tOplkError edrv_clearRxMulticastMacAddr(UINT8* pMacAddr_p);
tOplkError edrv_allocTxBuffer(tEdrvTxBuffer* pBuffer_p);
tOplkError edrv_freeTxBuffer(tEdrvTxBuffer* pBuffer_p);
tOplkError edrv_updateTxBuffer(tEdrvTxBuffer* pBuffer_p);
tOplkError edrv_sendTxBuffer(tEdrvTxBuffer* pBuffer_p);
tOplkError edrv_setTxBufferReady(tEdrvTxBuffer* pBuffer_p);
tOplkError edrv_startTxBuffer(tEdrvTxBuffer* pBuffer_p);
tOplkError edrv_releaseRxBuffer(tEdrvRxBuffer* pBuffer_p);
tOplkError edrv_changeRxFilter(tEdrvFilter* pFilter_p, UINT count_p, UINT entryChanged_p, UINT changeFlags_p);
int edrv_getDiagnostics(char* pBuffer_p, INT size_p);
tOplkError edrvcyclic_init(void);
tOplkError edrvcyclic_shutdown(void);
tOplkError edrvcyclic_setCycleTime(UINT32 cycleTimeUs_p);
tOplkError edrvcyclic_startCycle(void);
tOplkError edrvcyclic_stopCycle(void);
tOplkError edrvcyclic_setMaxTxBufferListSize(UINT maxListSize_p);
  tOplkError edrvcyclic_setNextTxBufferList(tEdrvTxBuffer** ppTxBuffer_p, UINT txBufferCount_p);// jdk SECTION_EDRVCYC_SET_NEXT_TX;
tOplkError edrvcyclic_regSyncHandler(tEdrvCyclicCbSync pfnEdrvCyclicCbSync_p);
tOplkError edrvcyclic_regErrorHandler(tEdrvCyclicCbError pfnEdrvCyclicCbError_p);
tOplkError edrvcyclic_getDiagnostics(tEdrvCyclicDiagnostics** ppDiagnostics_p);