workfiles/oplk-edrv_h.ads


  -- continuous min/max/avg measurement
  --/< Cycle counter
   type tEdrvCyclicDiagnostics_aSampleTimeStamp_array is array (0 .. 500) of aliased Extensions.unsigned_long_long;
   type tEdrvCyclicDiagnostics_aCycleTime_array is array (0 .. 500) of aliased unsigned;
   type tEdrvCyclicDiagnostics_aUsedCycleTime_array is array (0 .. 500) of aliased unsigned;
   type tEdrvCyclicDiagnostics_aSpareCycleTime_array is array (0 .. 500) of aliased unsigned;
   type tEdrvCyclicDiagnostics is record
      cycleCount : aliased Extensions.unsigned_long_long;  -- oplk/edrv.h:219
      cycleTimeMin : aliased unsigned;  -- oplk/edrv.h:220
      cycleTimeMax : aliased unsigned;  -- oplk/edrv.h:221
      cycleTimeMeanSum : aliased Extensions.unsigned_long_long;  -- oplk/edrv.h:222
      usedCycleTimeMin : aliased unsigned;  -- oplk/edrv.h:223
      usedCycleTimeMax : aliased unsigned;  -- oplk/edrv.h:224
      usedCycleTimeMeanSum : aliased Extensions.unsigned_long_long;  -- oplk/edrv.h:225
      spareCycleTimeMin : aliased unsigned;  -- oplk/edrv.h:226
      spareCycleTimeMax : aliased unsigned;  -- oplk/edrv.h:227
      spareCycleTimeMeanSum : aliased Extensions.unsigned_long_long;  -- oplk/edrv.h:228
      sampleNum : aliased unsigned;  -- oplk/edrv.h:230
      sampleBufferedNum : aliased unsigned;  -- oplk/edrv.h:231
      aSampleTimeStamp : aliased tEdrvCyclicDiagnostics_aSampleTimeStamp_array;  -- oplk/edrv.h:232
      aCycleTime : aliased tEdrvCyclicDiagnostics_aCycleTime_array;  -- oplk/edrv.h:233
      aUsedCycleTime : aliased tEdrvCyclicDiagnostics_aUsedCycleTime_array;  -- oplk/edrv.h:234
      aSpareCycleTime : aliased tEdrvCyclicDiagnostics_aSpareCycleTime_array;  -- oplk/edrv.h:235
   end record;
   pragma Convention (C_Pass_By_Copy, tEdrvCyclicDiagnostics);  -- oplk/edrv.h:236

   --  skipped anonymous struct anon_56

  --/< Minimum measured cycle time
  --/< Maximum measured cycle time
  --/< Sum of the mean measured cycle times
  --/< Minimum utilized cycle time
  --/< Maximum utilized cycle time
  --/< Sum of the mean utilized cycle times
  --/< Minimum spare cycle time
  --/< Maximum spare cycle time
  --/< Sum of the mean spare cycle times
  -- sampling of runaway cycles
  --/< Sample number
  --/< Buffered sample number
  --/< Array of sampled timestamps (SoC send)
  --/< Array of cycle time values (until next SoC send)
  --/< Array of used cycle time values
  --/< Array of spare cycle time values
  --------------------------------------------------------------------------------
  -- function prototypes
  --------------------------------------------------------------------------------
   function edrv_init (pEdrvInitParam_p : access tEdrvInitParam) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:245
   pragma Import (C, edrv_init, "edrv_init");

   function edrv_shutdown return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:246
   pragma Import (C, edrv_shutdown, "edrv_shutdown");

   function edrv_setRxMulticastMacAddr (pMacAddr_p : access unsigned_char) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:247
   pragma Import (C, edrv_setRxMulticastMacAddr, "edrv_setRxMulticastMacAddr");

   function edrv_clearRxMulticastMacAddr (pMacAddr_p : access unsigned_char) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:248
   pragma Import (C, edrv_clearRxMulticastMacAddr, "edrv_clearRxMulticastMacAddr");

   function edrv_allocTxBuffer (pBuffer_p : access tEdrvTxBuffer) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:249
   pragma Import (C, edrv_allocTxBuffer, "edrv_allocTxBuffer");

   function edrv_freeTxBuffer (pBuffer_p : access tEdrvTxBuffer) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:250
   pragma Import (C, edrv_freeTxBuffer, "edrv_freeTxBuffer");

   function edrv_updateTxBuffer (pBuffer_p : access tEdrvTxBuffer) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:251
   pragma Import (C, edrv_updateTxBuffer, "edrv_updateTxBuffer");

   function edrv_sendTxBuffer (pBuffer_p : access tEdrvTxBuffer) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:252
   pragma Import (C, edrv_sendTxBuffer, "edrv_sendTxBuffer");

   function edrv_setTxBufferReady (pBuffer_p : access tEdrvTxBuffer) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:253
   pragma Import (C, edrv_setTxBufferReady, "edrv_setTxBufferReady");

   function edrv_startTxBuffer (pBuffer_p : access tEdrvTxBuffer) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:254
   pragma Import (C, edrv_startTxBuffer, "edrv_startTxBuffer");

   function edrv_releaseRxBuffer (pBuffer_p : access tEdrvRxBuffer) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:255
   pragma Import (C, edrv_releaseRxBuffer, "edrv_releaseRxBuffer");

   function edrv_changeRxFilter
     (pFilter_p : access tEdrvFilter;
      count_p : unsigned;
      entryChanged_p : unsigned;
      changeFlags_p : unsigned) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:256
   pragma Import (C, edrv_changeRxFilter, "edrv_changeRxFilter");

   function edrv_getDiagnostics (pBuffer_p : Interfaces.C.Strings.chars_ptr; size_p : int) return int;  -- oplk/edrv.h:257
   pragma Import (C, edrv_getDiagnostics, "edrv_getDiagnostics");

   function edrvcyclic_init return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:259
   pragma Import (C, edrvcyclic_init, "edrvcyclic_init");

   function edrvcyclic_shutdown return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:260
   pragma Import (C, edrvcyclic_shutdown, "edrvcyclic_shutdown");

   function edrvcyclic_setCycleTime (cycleTimeUs_p : unsigned) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:261
   pragma Import (C, edrvcyclic_setCycleTime, "edrvcyclic_setCycleTime");

   function edrvcyclic_startCycle return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:262
   pragma Import (C, edrvcyclic_startCycle, "edrvcyclic_startCycle");

   function edrvcyclic_stopCycle return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:263
   pragma Import (C, edrvcyclic_stopCycle, "edrvcyclic_stopCycle");

   function edrvcyclic_setMaxTxBufferListSize (maxListSize_p : unsigned) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:264
   pragma Import (C, edrvcyclic_setMaxTxBufferListSize, "edrvcyclic_setMaxTxBufferListSize");

  -- jdk SECTION_EDRVCYC_SET_NEXT_TX;
   function edrvcyclic_setNextTxBufferList (ppTxBuffer_p : System.Address; txBufferCount_p : unsigned) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:265
   pragma Import (C, edrvcyclic_setNextTxBufferList, "edrvcyclic_setNextTxBufferList");

   function edrvcyclic_regSyncHandler (pfnEdrvCyclicCbSync_p : tEdrvCyclicCbSync) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:266
   pragma Import (C, edrvcyclic_regSyncHandler, "edrvcyclic_regSyncHandler");

   function edrvcyclic_regErrorHandler (pfnEdrvCyclicCbError_p : tEdrvCyclicCbError) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:267
   pragma Import (C, edrvcyclic_regErrorHandler, "edrvcyclic_regErrorHandler");

   function edrvcyclic_getDiagnostics (ppDiagnostics_p : System.Address) return oplk.errordefs_h.tOplkError;  -- oplk/edrv.h:268
   pragma Import (C, edrvcyclic_getDiagnostics, "edrvcyclic_getDiagnostics");

end oplk.edrv_h;
